--- a/src/main/resources/templates/userPage/fragmentLessonVideo/mainContentLessonVideo.html
+++ b/src/main/resources/templates/userPage/fragmentLessonVideo/mainContentLessonVideo.html
@@ -9,7 +9,8 @@
             <div class="col-lg-9">
                 <div class="video-player rounded-3">
                     <video controls crossorigin="anonymous" playsinline
-                        th:poster="@{${course.courseImg} ? ${course.courseImg} : '/assets/images/courses/4by3/01.jpg'}">
+                        th:poster="@{${course.courseImg} ? ${course.courseImg} : '/assets/images/courses/4by3/01.jpg'}"
+                        style="object-fit: contain; max-width: 100%; max-height: 100%;">
                         <source th:src="@{/api/video/stream/video/{videoURL}(videoURL=${lessonVideoURL})}" size="360">
                         <source th:src="@{/api/video/stream/video/{videoURL}(videoURL=${lessonVideoURL})}" size="720">
                         <source th:src="@{/api/video/stream/video/{videoURL}(videoURL=${lessonVideoURL})}" size="1080">
