--- a/src/main/resources/templates/loginPage/accountBlocked.html
+++ b/src/main/resources/templates/loginPage/accountBlocked.html
@@ -73,7 +73,7 @@
         <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
             <div class="card shadow">
                 <div class="card-body text-center position-relative">
-                    <a href="/logout" class="logout-btn" title="logout">
+                    <a th:href="@{/logout}" class="logout-btn" title="logout">
                         <i class="fas fa-arrow-left"></i> Logout
                     </a>
                     <div class="blocked-icon">
