--- a/src/main/resources/templates/adminDashBoard/fragments/adminNotificationContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/adminNotificationContent.html
@@ -329,12 +329,12 @@
                                         class="btn btn-primary btn-sm" title="View Details">
                                         <i class="fas fa-eye"></i>
                                     </a>
-                                    <a th:if="${n.type == 'REPORT_COURSE' or n.type == 'REPORT_COMMENT'}"
+                                    <a th:if="${n.type == 'REPORT_COURSE' or n.type == 'REPORT_COMMENT'or n.type == 'INSTRUCTOR_REPLY_BLOCK'}"
                                         th:href="@{/admin/reports}" class="btn btn-danger btn-sm"
                                         title="Manage Reports">
                                         <i class="fas fa-flag"></i>
                                     </a>
-                                    <a th:if="${n.type != 'REPORT_COURSE' and n.type != 'REPORT_COMMENT' and n.course != null and n.course.courseId != null}"
+                                    <a th:if="${n.type != 'REPORT_COURSE' and n.type != 'REPORT_COMMENT' and n.type != 'INSTRUCTOR_REPLY_BLOCK' and n.course != null and n.course.courseId != null}"
                                         th:href="@{/admin/course/detail/{courseId}(courseId=${n.course.courseId})}"
                                         class="btn btn-success btn-sm" title="View Course">
                                         <i class="fas fa-book-open"></i>
