update enroll revenue

--- a/src/main/resources/templates/instructorDashboard/fragments/profileContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/profileContent.html
@@ -2,7 +2,7 @@
     <!-- Title -->
     <div class="row">
         <div class="col-12 mb-3">
-            <h1 class="h3 mb-2 mb-sm-0">My Profile</h1>
+            <h4 class="mb-2 mb-sm-0">Management Profile</h4>
         </div>
     </div>
 
