--- a/src/main/resources/templates/instructorDashboard/fragments/sidebarUpdate.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/sidebarUpdate.html
@@ -2,7 +2,7 @@
 
   <!-- Navbar brand for xl START -->
   <div class="d-flex align-items-center">
-    <a class="navbar-brand" th:href="@{/instructor}">
+    <a class="navbar-brand" th:href="@{/instructor/courses}">
       <img class="navbar-brand-item" th:src="@{/assets/images/logo-light.svg}" alt="">
     </a>
   </div>
@@ -37,9 +37,9 @@
 
         <!-- Menu item 5 -->
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/instructor/orders}">
+          <a class="nav-link" th:href="@{/instructor/invoice}">
             <i class="fas fa-fw fa-credit-card"></i>
-            <span>Orders & Payments</span>
+            <span>Revenue</span>
           </a>
         </li>
         <li class="nav-item">
