--- a/src/main/resources/templates/instructorDashboard/indexUpdate.html
+++ b/src/main/resources/templates/instructorDashboard/indexUpdate.html
@@ -72,11 +72,9 @@
 <script th:src="@{/assets/vendor/purecounterjs/dist/purecounter_vanilla.js}"></script>
 <script th:src="@{/assets/vendor/apexcharts/js/apexcharts.min.js}"></script>
 <script th:src="@{/assets/vendor/overlay-scrollbar/js/overlayscrollbars.min.js}"></script>
-
 <!-- Template Functions -->
-
-<script th:src="@{/assets/js/functions.js}"></script>
-<script th:src="@{/js/instructorFilter.js}"></script>
+<!--<script th:src="@{/assets/js/functions.js}"></script>-->
+<!--<script th:src="@{/js/instructorFilter.js}"></script>-->
 </body>
 
 </html>
