--- a/src/main/resources/templates/instructorDashboard/fragments/invoice.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/invoice.html
@@ -94,7 +94,7 @@
                         <div class="d-flex align-items-center">
                             <div>
                                 <p class="text-bg-muted mb-1">Platform Fees</p>
-                                <h4 class="fw-bold mb-0 text-danger" th:utext="${maintain} + ' VND'" >37.500.000 ₫</h4>
+                                <h4 class="fw-bold mb-0 text-danger" th:text="${#numbers.formatDecimal(maintain, 0, 'COMMA', 0, 'POINT')} == 0 ? 0 + ' VND' : ${#numbers.formatDecimal(maintain, 0, 'COMMA', 0, 'POINT')} + ' VND'" >37.500.000 ₫</h4>
                             </div>
                         </div>
                     </div>
@@ -156,21 +156,10 @@
                 </h5>
             </div>
 
-            <div class="row mb-3">
-                <div class="col-md-4 mb-2">
-                    <select class="form-select">
-                        <option name="action" value="date_desc">Latest date</option>
-                        <option name="action" value="date_asc">Oldest date</option>
-                        <option name="action" value="revenue_desc">Highest Revenue</option>
-                        <option name="action" value="revenue_asc">Lowest revenue</option>
-                    </select>
-                </div>
-            </div>
-
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <span class="text-muted" id="ordersCount" th:utext="Showing + ' ' +${totalElement} + ' ' + orders">Showing 0 orders</span>
                 <span class="fw-bold" id="ordersTotal"
-                      th:text="${#numbers.formatDecimal(sumRevenue, 0, 'COMMA', 2, 'POINT')} + ' VND'">Tổng: 0₫</span>
+                      th:text="${#numbers.formatDecimal(sumRevenue, 0, 'COMMA', 0, 'POINT')} + ' VND'">Tổng: 0₫</span>
             </div>
 
             <div class="table-container">
@@ -199,7 +188,7 @@
                         <td th:utext="${order.orderId}">OrderId</td>
                         <td th:utext="${order.fullName}">Name Enrollment</td>
                         <td th:utext="${order.orderDate}">Order Date</td>
-                        <td th:text="${#numbers.formatDecimal(order.amount, 0, 'COMMA', 2, 'POINT')} + ' VNĐ'">Amount
+                        <td th:text="${#numbers.formatDecimal(order.amount, 0, 'COMMA', 0, 'POINT')} == 0 ? 0 + ' VND' : ${#numbers.formatDecimal(order.amount, 0, 'COMMA', 2, 'POINT')} + ' VND'">Amount
                         </td>
                         </td>
 
@@ -270,7 +259,7 @@
             <td>${formatDate(order.orderDate)}</td>
             <td>${order.amount.toLocaleString()} VND</td>
             <td>
-                <a href="/instructor/orders/view/${order.orderId}"
+                <a href="/instructor/invoice/${order.orderId}"
                    class="btn btn-info-soft btn-round me-1 mb-1 mb-md-0"
                    title="View"><i class="fas fa-eye"></i></a>
             </td>
